Add dynamic theme

--- a/AstarVisualizer/AstarVisualizer.csproj
+++ b/AstarVisualizer/AstarVisualizer.csproj
@@ -11,4 +11,10 @@
     <PackageReference Include="SFML.Net" Version="2.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="theme\default.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
